# haskell_life

./: .gitignore  CGL  README.md  haskell-life.cabal  install_glut.txt  life.cabal  makeDep  stack.yaml
app/console/: Main.hs
app/opengl/: Grid2d.hs
src/: CGL.hs  Conway.hs  Grid2d.hs  Grid2dModel.hs  HelloWorld.hs  Main.hs  Profile.hs
src/HashLife/: Atomic.hs  Composite.hs  Map.hs  Population.hs  QuadTree.hs
