name:           life
version:        0.1
cabal-version:  >=1.2
build-type:     Custom
author:         monade
data-files:     
                CGL.hs, 
                Conway.hs, 
                Grid2d.hs, 
                Main.hs,
                Grid2dModel.hs,
                life.cabal 

executable Grid2d 
  build-depends:   base >= 4,
                   containers,
                   GLUT,
                   mtl
  ghc-options:     -Wall -rtsopts
  main-is:         Grid2d.hs
  hs-source-dirs:  src

executable Main
  build-depends:   base >= 4,
                   containers,
                   GLUT
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts
  main-is:         Main.hs

